# phpmyadmin-cli-rs

./: .editorconfig  Cargo.toml  README.md
src/: command.rs  export.rs  lib.rs  main.rs  pma_client.rs  read_zip.rs
