[package]
name = "phpmyadmin-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.58"
async-compression = { version = "0.3", features = ["deflate", "gzip", "tokio"] }
bytes = "1"
clap = { version ="4", features = ["derive"] }
itertools = "0.10.5"
once_cell = "1.15"
regex = "1.5.6"
reqwest = "0.11.11"
tokio = { version = "^1", features = ["macros", "fs", "rt-multi-thread"] }
